# hawk

./: .gitignore  Cargo.toml  LICENSE.txt  library.hawk  readme.md  testfile.hawk  todo.md
app/: Cargo.toml  build.rs  out.csv  rustfmt.toml  test.csv
app/src/: eval.rs  eval_expr.rs  main.rs  run.rs  standard_lib.rs  standard_lib_hawk.rs  standard_lib_rs.rs  test.rs
app/src/eval/: expression.rs  interpreter.rs  mod.rs  operations.rs  placeholder_cas.rs  statement.rs
app/src/standard_lib/: mod.rs  standard_lib_hawk.rs  standard_lib_rs.rs
cas/: Cargo.toml
cas/src/: equation.rs  expression.rs  factor.rs  lib.rs  term.rs  terminal.rs  token.rs
common/: Cargo.toml
common/src/: lib.rs  object.rs  token.rs  tree.rs
docs/: spec.md  std.md
interpreter/: Cargo.toml  build.rs
interpreter/src/: csv.rs  expression.rs  interpreter.rs  lib.rs  operations.rs  run.rs  statement.rs  test.rs
interpreter/src/standard_lib/: mod.rs  standard_lib_hawk.rs  standard_lib_rs.rs
io/: Cargo.toml
io/src/: csv.rs  error.rs  lib.rs  object.rs  output.rs  shell.rs  tokentype.rs
lib/: Cargo.toml
lib/src/: csv.rs  error.rs  lexer.rs  lib.rs  object.rs  parser.rs  token.rs  tree.rs
src/: eval.rs  io.rs  lexer.rs  main.rs  object.rs  parse.rs  parser.rs  run.rs  token.rs  tree.rs  utils.rs
src/std/: assoc.rs
standard_lib/: array.hawk  combinatorics.hawk  finders.hawk  math.hawk  stats.hawk  trig.hawk
web/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.vue  hawk_layer.ts  main.ts
web/src/assets/: base.css  pastel-on-dark.css
web/src/hawk-wasm/: Cargo.toml  hawk_interface.ts
web/src/hawk-wasm/pkg/: .gitignore  hawk_wasm.d.ts  hawk_wasm.js  hawk_wasm_bg.js  hawk_wasm_bg.wasm  hawk_wasm_bg.wasm.d.ts
web/src/hawk-wasm/src/: lib.rs
