[package]
name = "hawk-lang"
version = "0.1.0"
rust-version = "1.59"
edition = "2021"
license = "MIT"
description = "The original implementation of the Hawk programming language"
repository = "https://github.com/MATSMACKE/hawk/"
homepage = "https://github.com/MATSMACKE/hawk/"
authors = ["Mats Macke"]
build = "build.rs"

[dependencies]
hawk_lib = {path = "../lib"}
hawk_common = {path = "../common"}
hawk_cli_io = {path = "../io"}
float-cmp = "0.9.0"

[build-dependencies]
hawk_lib = {path = "../lib"}
hawk_common = {path = "../common"}

[profile.release]
strip = "debuginfo"