[package]
name = "hawk"
version = "0.1.0"
rust-version = "1.59"
edition = "2021"
license = "MIT"
description = "The original implementation of the Hawk programming language"
repository = "https://github.com/MATSMACKE/hawk/"
homepage = "https://github.com/MATSMACKE/hawk/"
authors = ["Mats Macke"]

[dependencies]
hawk_common = {path = "../common"}
hawk_cli_io = {path = "../io"}
hawk_interpreter = {path = "../interpreter"}
float-cmp = "0.9.0"

[profile.release]
strip = "debuginfo"