[package]
name = "hawk_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
float-cmp = "0.9.0"
term-table = "1.3.2"
rust_decimal = {version = "1.23.1", optional = false, features = ["maths"]}
rust_decimal_macros = "1.23.1"