[package]
name = "hawk_interpreter"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hawk_common = {path = "../common"}
hawk_lib = {path = "../lib"}
decimal = "2.1.0"
float-cmp = "0.9.0"
unicode-segmentation = "1.9.0"

[build-dependencies]
hawk_lib = {path = "../lib"}
hawk_common = {path = "../common"}