[package]
name = "hawk_interpreter"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hawk_common = {path = "../common"}
hawk_lib = {path = "../lib"}
rust_decimal = {version = "1.23.1", optional = false, features = ["maths"]}
rust_decimal_macros = "1.23.1"
float-cmp = "0.9.0"
unicode-segmentation = "1.9.0"

[build-dependencies]
hawk_lib = {path = "../lib"}
hawk_common = {path = "../common"}