[package]
name = "hawk_cli_io"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-segmentation = "1.9.0"
term-table = "1.3.2"
crossterm = "0.23.1"
termsize = "0.1.6"
hawk_common = {path = "../common"}